spacing fix

--- a/src/css/docs-prose.css
+++ b/src/css/docs-prose.css
@@ -89,7 +89,9 @@
     overflow: auto !important;
     -webkit-overflow-scrolling: touch;
   }
+}
 
+@media screen and (min-width: 1200px) {
   .scroll-auto-mxl {
     overflow: auto !important;
     -webkit-overflow-scrolling: touch;
